<resources>
    <string name="app_name">AplicacionTp</string>
    <string name="API_MAPS">AIzaSyB9fBN_QNsb5D5WWi5Mrb36-8L0beC0QpM</string>
    <!--titulos-->
    <string name="home">Inicio</string>
    <string name="contactos">Contactos</string>
    <string name="miPerfil">Mi Perfil</string>
    <!-- actividad login-->
    <string name="emailLogin">Email</string>
    <string name="passLogin">Contraseña</string>
    <string name="botonLogin">Iniciar sesion</string>
    <string name="action_sign_in_short">Sin cuenta?registrate</string>
    <string name="error_invalid_email">Email invalido</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registrar">RegistrarActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_subir_momento">Subir Momento</string>
    <string name="title_activity_momento_detalle">MomentoDetalle</string>
    <!-- actividad login-->
    <string name="emailRegistrar">Email</string>
    <string name="passwordReg">Contraseña</string>
    <string name="passwordRegistrar">Contraseña</string>
    <string name="password2Reg">Repita la contraseña</string>
    <string name="password2Registrar">Repita la contraseña</string>

    <!-- actividad subir momento-->
    <string name="dSubirImagen">Escriba una descripción(opcional)</string>
    <string name="botonSubirImagen">Subir Momento</string>
     <string name="ubicacionNoRegistra">Tu ubicación no pudo ser detectada</string>
    <string name="enciendaGps">Encienda la conexion de gps,por favor</string>
<string name="elegir">Elegir imagen</string>
    <string name="foto">Sacar foto</string>
    <!-- fragmento momento-->
    <string name="botonDescargarImagen">Descargar imagen</string>
    <string name="botonVerDetalleMomento">Ver detalles</string>

    <!-- fragmento momento momemtno detalle-->
    <string name="cartelUsuarioMomentoDetalle">Subido por :</string>
    <string name="cartelDescripcionMomentoDetalle">Descripcion:</string>
    <string name="cartelFechaMomentoDetalle">Fecha:</string>
    <string name="cartelLatitudMomentoDetalle">Latitud:</string>
    <string name="cartelLongitudMomentoDetalle">Longitud:</string>
    <string name="cartelZonaMomentoDetalle">Zona:</string>
    <!-- chat -->
    <string name="verChat">ver chat completo</string>
    <!--buscar contacto -->
    <string name="buscar">Buscar</string>
    <string name="buscarHint">Escriba un nombre</string>
    <!-- configurar-->
    <string name="nombreNuevo">Nuevo nombre</string>
    <string name="botonNombre">Cambiar nombre</string>
    <string name="contrasenaVieja">Escribe tu contraseña actual</string>
    <string name="contrasenaNueva1">Escribe la contraseña nueva</string>
    <string name="contrasenaNueva2">Escribila de nuevo</string>
    <string name="botonContrasena">Cambiar contraseña</string>
    <string name="idioma">Elegir idioma</string>
    <string name="espanol">Español</string>
    <string name="ingles">Inglés</string>
    <string name="ruso">Ruso</string>
    <!-- errore-->
    <string name="error_timeout_red">no hay conexion/timeout</string>
    <string name="error_auth">error de autorizacion</string>
    <string name="error_server">error de server</string>
    <string name="error_red">error_red </string>
    <string name="error_parse">error parseando</string>
    <string name="no_mail">Escriba su email</string>
    <string name="no_nombre">Escriba su nombre</string>
    <string name="no_pass">Escriba su contraseña</string>
    <string name="no_pass2">Repita la contraseña</string>
    <string name="no_pass3">Escriba su contraseña nueva</string>

    <string name="pass_distinto">Las contraseñas deben coincidir</string>
    <!--popups-->
    <string name="cerrarSesion">¿Quiere cerrar sesión?</string>
    <string name="editarDescripcion">¿Quiere cambiar la descricpión?</string>
    <string name="descripcionHint">escriba la nueva descripción</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="nombreRegistrar">Nombre</string>
    <string name="perfil">Configuracion</string>
    <!--notificaciones-->
    <string name="noti1titulo">Buscando ubicacion</string>
    <string name="noti1texto">La imagen se subira cuando se encuentre la ubicacion</string>
    <string name="noti2titulo">Coordenadas encontradas</string>
    <string name="noti2texto">Momento subido</string>
    <string name="noti3titulo">Error al subir</string>
    <string name="borrarMomento">¿Quiere borrar este momento?</string>
</resources>
