<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/perfil_edit"
            android:layout_width="371dp"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/cartelNombreP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombreNuevo" />

                <EditText
                    android:id="@+id/nombreP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"

                    android:hint="@string/nombreRegistrar" />
                <Button
                    android:id="@+id/botonNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/botonNombre" />
                <TextView
                    android:id="@+id/cartelPassP1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contrasenaVieja" />

                <EditText
                    android:id="@+id/contrasenaVieja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="" />

                <TextView
                    android:id="@+id/cartelPassp2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contrasenaNueva1" />
                <EditText
                    android:id="@+id/contrasenaNueva1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="" />
                <TextView
                    android:id="@+id/cartelPassp3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contrasenaNueva1"  />
                <EditText
                    android:id="@+id/contrasenaNueva2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="" />


                <Button
                    android:id="@+id/botonContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/botonContrasena" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id ="@+id/cambiarIdioma"
                    android:gravity="center"
                    android:text="@string/idioma"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10">

                    <Button
                        android:id="@+id/botonEspanol"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="5"
                        android:layout_gravity="center"
                        android:background="@color/colorAccent"
                        android:drawableRight="@drawable/imagen_boton"
                        android:drawablePadding="2dp"
                        android:paddingRight="10dp"
                        android:text="@string/espanol" />

                    <Button
                        android:id="@+id/botonIngles"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="5"
                        android:background="@color/colorAccent"
                        android:drawableRight="@drawable/camara_boton"
                        android:drawablePadding="2dp"
                        android:paddingRight="10dp"
                        android:text="@string/ingles"/>
                    <Button
                        android:id="@+id/botonRuso"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="5"
                        android:background="@color/colorAccent"
                        android:drawableRight="@drawable/camara_boton"
                        android:drawablePadding="2dp"
                        android:paddingRight="10dp"
                        android:text="@string/ruso" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>